Update search bar colors

--- a/Currenz/Supporting Files/en.lproj/Localizable.strings
+++ b/Currenz/Supporting Files/en.lproj/Localizable.strings
@@ -11,3 +11,4 @@
 //Basics
 "currency_exchange_title" = "Exchange";
 "not_matching_pattern" = "`%@` not match to pattern: `%@`";
+"select_new_currency" = "Select new currency";
